force-app/main/default/objects/bpats__ATS_Job_Object_Mapping__mdt/bpats__ATS_Job_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ATS Job Object Mapping</label>
    <pluralLabel>ATS Job Object Mappings</pluralLabel>
</CustomObject>