force-app/main/default/objects/bpats__ATS_Job_Object_Mapping__mdt/fields/bpats__Days_Prior__c.field-meta.xml
<CustomField>
    <fullName>bpats__Days_Prior__c</fullName>
    <label>Days Prior</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>