force-app/main/default/objects/bpats__ATS_Job_Object_Mapping__mdt/fields/bpats__Deletion_Frequency__c.field-meta.xml
<CustomField>
    <fullName>bpats__Deletion_Frequency__c</fullName>
    <label>Deletion Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>