force-app/main/default/objects/bpats__ATS_Job_Object_Mapping__mdt/fields/bpats__Is_Closed_Field__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Closed_Field__c</fullName>
    <label>Is Closed Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>