force-app/main/default/objects/bpats__ATS_Job_Object_Mapping__mdt/fields/bpats__Lookup_Name_on_Stage_Object__c.field-meta.xml
<CustomField>
    <fullName>bpats__Lookup_Name_on_Stage_Object__c</fullName>
    <label>Lookup Name on Stage Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>